test/samples/TileFusion/add_mul_fusion_new/column_reduction_expand_fusion.stderr.txt
2026-06-10 10:14:35,282 - __main__ - INFO - Starting TileLang daemon
2026-06-10 10:14:35,282 - __main__ - INFO -   Socket: /tmp/tilelang_daemon_84017.sock
2026-06-10 10:14:35,282 - __main__ - INFO -   Template dir: /Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/lib/TileOps
2026-06-10 10:14:35,282 - __main__ - INFO -   Max entries: 1000
2026-06-10 10:14:35,398 - tilelang_dsl.daemon_server - INFO - RPC server started at /tmp/tilelang_daemon_84017.sock
TileLang daemon started (pid=84018, socket=/tmp/tilelang_daemon_84017.sock)
Info: TileLang daemon started successfully
2026-06-10 10:14:36,290 - tilelang_dsl.daemon_server - ERROR - Error processing instantiate: constraint 0 for kernel 'template_tcolsum' raised AttributeError: 'dict' object has no attribute 'b_layout' at /Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/lib/TileOps/tcolsum_template.py:13
Traceback (most recent call last):
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/daemon_server.py", line 162, in _process_request
    result = await self._rpc_instantiate(params)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/daemon_server.py", line 202, in _rpc_instantiate
    mlir_text = await self.cache.instantiate(
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<4 lines>...
    )
    ^
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/daemon_core.py", line 120, in instantiate
    mlir_text = await self._do_instantiate(
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
        target, op, operand_specs, context_attrs
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/daemon_core.py", line 190, in _do_instantiate
    descriptor = select_kernel(
        target,
    ...<4 lines>...
        return_metadata=False,
    )
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/kernel.py", line 2780, in select_kernel
    _raise_constraint_evaluation_error(result.evaluation)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/kernel.py", line 2333, in _raise_constraint_evaluation_error
    raise TypeError(result.error_message)
TypeError: constraint 0 for kernel 'template_tcolsum' raised AttributeError: 'dict' object has no attribute 'b_layout' at /Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/lib/TileOps/tcolsum_template.py:13
Error: Daemon RPC failed: instantiate failed: constraint 0 for kernel 'template_tcolsum' raised AttributeError: 'dict' object has no attribute 'b_layout' at /Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/lib/TileOps/tcolsum_template.py:13
ExpandTileOp: daemon helper failed (rc=1): 
ExpandTileOp: daemon RPC failed, falling back to subprocess mode
2026-06-10 10:14:36,647 - asyncio - ERROR - Future exception was never retrieved
future: <Future finished exception=TypeError("constraint 0 for kernel 'template_tcolsum' raised AttributeError: 'dict' object has no attribute 'b_layout' at /Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/lib/TileOps/tcolsum_template.py:13")>
Traceback (most recent call last):
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/daemon_server.py", line 162, in _process_request
    result = await self._rpc_instantiate(params)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/daemon_server.py", line 202, in _rpc_instantiate
    mlir_text = await self.cache.instantiate(
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<4 lines>...
    )
    ^
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/daemon_core.py", line 120, in instantiate
    mlir_text = await self._do_instantiate(
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
        target, op, operand_specs, context_attrs
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/daemon_core.py", line 190, in _do_instantiate
    descriptor = select_kernel(
        target,
    ...<4 lines>...
        return_metadata=False,
    )
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/kernel.py", line 2780, in select_kernel
    _raise_constraint_evaluation_error(result.evaluation)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^
  File "/Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/tilelang-dsl/python/tilelang_dsl/kernel.py", line 2333, in _raise_constraint_evaluation_error
    raise TypeError(result.error_message)
TypeError: constraint 0 for kernel 'template_tcolsum' raised AttributeError: 'dict' object has no attribute 'b_layout' at /Users/melikanorouzbeygi/Workspace/Huawei/ptoas-pr786-vf-fusion/lib/TileOps/tcolsum_template.py:13
// -----// IR Dump Before PTOLowLevelLoopFusion (pto-low-level-loop-fusion) //----- //
module attributes {pto.backend = "vpto", pto.kernel_kind = #pto.kernel_kind<vector>, pto.target_arch = "a5"} {
  func.func @column_reduction_expand_fusion() {
    %c128_i64 = arith.constant 128 : i64
    %c4096_i64 = arith.constant 4096 : i64
    %c0_i64 = arith.constant 0 : i64
    %c8192_i64 = arith.constant 8192 : i64
    %0 = pto.alloc_tile addr = %c8192_i64 : !pto.tile_buf<vec, 32x32xf32>
    %1 = pto.alloc_tile addr = %c0_i64 : !pto.tile_buf<vec, 1x32xf32>
    %2 = pto.alloc_tile addr = %c4096_i64 : !pto.tile_buf<vec, 32x32xf32>
    %3 = pto.alloc_tile addr = %c128_i64 : !pto.tile_buf<vec, 32x32xf32>
    %c0 = arith.constant 0 : index
    %c1 = arith.constant 1 : index
    %c32 = arith.constant 32 : index
    %4 = pto.tile_buf_addr %0 : !pto.tile_buf<vec, 32x32xf32> -> memref<32x32xf32, #pto.address_space<vec>>
    %5 = pto.tile_buf_addr %1 : !pto.tile_buf<vec, 1x32xf32> -> memref<1x32xf32, #pto.address_space<vec>>
    %c32_0 = arith.constant 32 : index
    %c32_1 = arith.constant 32 : index
    %c64 = arith.constant 64 : index
    %6 = arith.index_cast %c32_1 : index to i32
    %7 = scf.for %arg0 = %c0 to %c32_1 step %c64 iter_args(%arg1 = %6) -> (i32) {
      %mask, %scalar_out = pto.plt_b32 %arg1 : i32 -> !pto.mask<b32>, i32
      %11 = arith.subi %c32, %arg0 : index
      %subview = memref.subview %4[%c0, %arg0] [%c1, %11] [%c1, %c1] : memref<32x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
      %result = pto.vlds %subview[%c0] : memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>> -> !pto.vreg<64xf32>
      %12 = scf.for %arg2 = %c1 to %c32_0 step %c1 iter_args(%arg3 = %result) -> (!pto.vreg<64xf32>) {
        %14 = arith.subi %c32, %arg0 : index
        %subview_9 = memref.subview %4[%arg2, %arg0] [%c1, %14] [%c1, %c1] : memref<32x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
        %result_10 = pto.vlds %subview_9[%c0] : memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>> -> !pto.vreg<64xf32>
        %15 = pto.vadd %arg3, %result_10, %mask : !pto.vreg<64xf32>, !pto.vreg<64xf32>, !pto.mask<b32> -> !pto.vreg<64xf32>
        scf.yield %15 : !pto.vreg<64xf32>
      }
      %13 = arith.subi %c32, %arg0 : index
      %subview_8 = memref.subview %5[%c0, %arg0] [%c1, %13] [%c1, %c1] : memref<1x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
      pto.vsts %12, %subview_8[%c0], %mask : !pto.vreg<64xf32>, memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>, !pto.mask<b32>
      scf.yield %scalar_out : i32
    }
    %c0_2 = arith.constant 0 : index
    %c1_3 = arith.constant 1 : index
    %c64_4 = arith.constant 64 : index
    %c32_5 = arith.constant 32 : index
    %8 = pto.tile_buf_addr %2 : !pto.tile_buf<vec, 32x32xf32> -> memref<32x32xf32, #pto.address_space<vec>>
    %9 = pto.tile_buf_addr %1 : !pto.tile_buf<vec, 1x32xf32> -> memref<1x32xf32, #pto.address_space<vec>>
    %10 = pto.tile_buf_addr %3 : !pto.tile_buf<vec, 32x32xf32> -> memref<32x32xf32, #pto.address_space<vec>>
    %c32_6 = arith.constant 32 : index
    %c32_7 = arith.constant 32 : index
    scf.for %arg0 = %c0_2 to %c32_6 step %c1_3 {
      %11 = arith.index_cast %c32_7 : index to i32
      %12 = scf.for %arg1 = %c0_2 to %c32_7 step %c64_4 iter_args(%arg2 = %11) -> (i32) {
        %mask, %scalar_out = pto.plt_b32 %arg2 : i32 -> !pto.mask<b32>, i32
        %13 = arith.subi %c32_5, %arg1 : index
        %subview = memref.subview %8[%arg0, %arg1] [%c1_3, %13] [%c1_3, %c1_3] : memref<32x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
        %result = pto.vlds %subview[%c0_2] : memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>> -> !pto.vreg<64xf32>
        %14 = arith.subi %c32_5, %arg1 : index
        %subview_8 = memref.subview %9[%c0_2, %arg1] [%c1_3, %14] [%c1_3, %c1_3] : memref<1x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
        %result_9 = pto.vlds %subview_8[%c0_2] : memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>> -> !pto.vreg<64xf32>
        %15 = pto.vmul %result, %result_9, %mask : !pto.vreg<64xf32>, !pto.vreg<64xf32>, !pto.mask<b32> -> !pto.vreg<64xf32>
        %16 = arith.subi %c32_5, %arg1 : index
        %subview_10 = memref.subview %10[%arg0, %arg1] [%c1_3, %16] [%c1_3, %c1_3] : memref<32x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
        pto.vsts %15, %subview_10[%c0_2], %mask : !pto.vreg<64xf32>, memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>, !pto.mask<b32>
        scf.yield %scalar_out : i32
      }
    }
    return
  }
}

// -----// IR Dump After PTOLowLevelLoopFusion (pto-low-level-loop-fusion) //----- //
module attributes {pto.backend = "vpto", pto.kernel_kind = #pto.kernel_kind<vector>, pto.target_arch = "a5"} {
  func.func @column_reduction_expand_fusion() {
    %c128_i64 = arith.constant 128 : i64
    %c4096_i64 = arith.constant 4096 : i64
    %c0_i64 = arith.constant 0 : i64
    %c8192_i64 = arith.constant 8192 : i64
    %0 = pto.alloc_tile addr = %c8192_i64 : !pto.tile_buf<vec, 32x32xf32>
    %1 = pto.alloc_tile addr = %c0_i64 : !pto.tile_buf<vec, 1x32xf32>
    %2 = pto.alloc_tile addr = %c4096_i64 : !pto.tile_buf<vec, 32x32xf32>
    %3 = pto.alloc_tile addr = %c128_i64 : !pto.tile_buf<vec, 32x32xf32>
    %c0 = arith.constant 0 : index
    %c1 = arith.constant 1 : index
    %c32 = arith.constant 32 : index
    %4 = pto.tile_buf_addr %0 : !pto.tile_buf<vec, 32x32xf32> -> memref<32x32xf32, #pto.address_space<vec>>
    %5 = pto.tile_buf_addr %1 : !pto.tile_buf<vec, 1x32xf32> -> memref<1x32xf32, #pto.address_space<vec>>
    %c32_0 = arith.constant 32 : index
    %c32_1 = arith.constant 32 : index
    %c64 = arith.constant 64 : index
    %6 = arith.index_cast %c32_1 : index to i32
    %7 = scf.for %arg0 = %c0 to %c32_1 step %c64 iter_args(%arg1 = %6) -> (i32) {
      %mask, %scalar_out = pto.plt_b32 %arg1 : i32 -> !pto.mask<b32>, i32
      %11 = arith.subi %c32, %arg0 : index
      %subview = memref.subview %4[%c0, %arg0] [%c1, %11] [%c1, %c1] : memref<32x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
      %result = pto.vlds %subview[%c0] : memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>> -> !pto.vreg<64xf32>
      %12 = scf.for %arg2 = %c1 to %c32_0 step %c1 iter_args(%arg3 = %result) -> (!pto.vreg<64xf32>) {
        %14 = arith.subi %c32, %arg0 : index
        %subview_9 = memref.subview %4[%arg2, %arg0] [%c1, %14] [%c1, %c1] : memref<32x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
        %result_10 = pto.vlds %subview_9[%c0] : memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>> -> !pto.vreg<64xf32>
        %15 = pto.vadd %arg3, %result_10, %mask : !pto.vreg<64xf32>, !pto.vreg<64xf32>, !pto.mask<b32> -> !pto.vreg<64xf32>
        scf.yield %15 : !pto.vreg<64xf32>
      }
      %13 = arith.subi %c32, %arg0 : index
      %subview_8 = memref.subview %5[%c0, %arg0] [%c1, %13] [%c1, %c1] : memref<1x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
      pto.vsts %12, %subview_8[%c0], %mask : !pto.vreg<64xf32>, memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>, !pto.mask<b32>
      scf.yield %scalar_out : i32
    }
    %c0_2 = arith.constant 0 : index
    %c1_3 = arith.constant 1 : index
    %c64_4 = arith.constant 64 : index
    %c32_5 = arith.constant 32 : index
    %8 = pto.tile_buf_addr %2 : !pto.tile_buf<vec, 32x32xf32> -> memref<32x32xf32, #pto.address_space<vec>>
    %9 = pto.tile_buf_addr %1 : !pto.tile_buf<vec, 1x32xf32> -> memref<1x32xf32, #pto.address_space<vec>>
    %10 = pto.tile_buf_addr %3 : !pto.tile_buf<vec, 32x32xf32> -> memref<32x32xf32, #pto.address_space<vec>>
    %c32_6 = arith.constant 32 : index
    %c32_7 = arith.constant 32 : index
    scf.for %arg0 = %c0_2 to %c32_6 step %c1_3 {
      %11 = arith.index_cast %c32_7 : index to i32
      %12 = scf.for %arg1 = %c0_2 to %c32_7 step %c64_4 iter_args(%arg2 = %11) -> (i32) {
        %mask, %scalar_out = pto.plt_b32 %arg2 : i32 -> !pto.mask<b32>, i32
        %13 = arith.subi %c32_5, %arg1 : index
        %subview = memref.subview %8[%arg0, %arg1] [%c1_3, %13] [%c1_3, %c1_3] : memref<32x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
        %result = pto.vlds %subview[%c0_2] : memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>> -> !pto.vreg<64xf32>
        %14 = arith.subi %c32_5, %arg1 : index
        %subview_8 = memref.subview %9[%c0_2, %arg1] [%c1_3, %14] [%c1_3, %c1_3] : memref<1x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
        %result_9 = pto.vlds %subview_8[%c0_2] : memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>> -> !pto.vreg<64xf32>
        %15 = pto.vmul %result, %result_9, %mask : !pto.vreg<64xf32>, !pto.vreg<64xf32>, !pto.mask<b32> -> !pto.vreg<64xf32>
        %16 = arith.subi %c32_5, %arg1 : index
        %subview_10 = memref.subview %10[%arg0, %arg1] [%c1_3, %16] [%c1_3, %c1_3] : memref<32x32xf32, #pto.address_space<vec>> to memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>
        pto.vsts %15, %subview_10[%c0_2], %mask : !pto.vreg<64xf32>, memref<?x?xf32, strided<[?, ?], offset: ?>, #pto.address_space<vec>>, !pto.mask<b32>
        scf.yield %scalar_out : i32
      }
    }
    return
  }
}

2026-06-10 10:14:36,674 - __main__ - INFO - Received shutdown signal
2026-06-10 10:14:36,674 - tilelang_dsl.daemon_server - INFO - Server cancelled
2026-06-10 10:14:36,674 - tilelang_dsl.daemon_server - INFO - RPC server stopped
2026-06-10 10:14:36,674 - __main__ - INFO - Daemon shutdown complete
TileLang daemon stopped (pid=84018)
